     * Fix the player's keep disappearing in 'Gathering Materials'.
     * New graphics for the Dwarvish Miner.
   * Under the Burning Suns:
     * New base frames for the Desert Sentinel and Prowler.
 * Graphics:
   * Removed the black background from some remaining old portraits
   * New portrait for Dwarf Thunderer, Dwarf Dragonguard, Human Pikeman, Dwarf Fighter, Dwarf Lord.
 * Language and i18n:
   * updated translations: Chinese (Traditional), Czech, French, German,
     Hungarian, Italian, Polish, Slovak, Spanish
 * Multiplayer:
   * Fixed the Default Era quick leaders not getting the -5% HP reduction.
   * Made leaders with 4 MP receive the quick trait also in Age of Heroes.
 * User interface:
   * Hide the "Network Player" option for Local MP Games (bug #12596).
   * Portraits with an icon are TC'ed again.
   * Dialogs with an input text are converted to the new dialogs.
 * WML Engine:
   * Prevent duplicate id conflicts when cloning units with WML (bug #12894)
   * [time_area], in EventWML, can now accept comma-separated lists of area ids
     for removing, but not for inserting; in the latter case, only the first id
     is considered to avoid stacking time_areas over a single location by
     accident.
   * [fire_event] children tags [primary_unit] and [secondary_unit] now
     take a real Standard Unit Filter instead of a x,y coordinate pair.
     When a filter matching multiple units is used, only the first matching
     unit will be taken for firing the event. Recall list filters and
     invalid locations are silently ignored.
 * Miscellaneous and bug fixes:
   * Fix clients not agreeing on remaining movepoints (bug #12467)
   * Fix summoning of other players recruit list on turn 1 (bug #12783)
   * Fix [item] overlays with visible_in_fog=yes magically becoming
     visible_in_fog=no (the former default for a missing attribute) when loading
     saved games - because the game was looking for a fogged= attribute
     instead on loading.